# hardware

./: .gitignore  AGENTS.md  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.old
.github/workflows/: README.md  build-firmware.yml
.trae/documents/: BLE属性更新函数改为按索引调用.md  BLE控制消息同步更新 last_msg_time.md  BLE设备操作简明指南.md  DZC01 按键状态属性改造.md  GUI新建设备自动启动实现方案.md  GUI测试新增PJ01设备.md  GUI设备卡片与进度条改造.md  PJ01 强度控制改为 power 逻辑（保持驱动不变）.md  优化DZC01 OLED显示与常驻网络信息.md  修复 BLE 写入未触发回调.md  修复 BLE 属性写入数值解析错误.md  修复 qtz.c 隐式声明编译错误.md  合并距离采集与上报任务（以 check_distance_task 为主）.md  在 base_device 优雅调用 BLE Service（避免循环引用）.md  在 device_ble_service.c 新增“控制模式”特征并实现 BLE_WiFi 切换.md  增量计算分片延时以快速响应周期缩短.md  将 BLE 属性写入与事件触发统一到 base_device.md  将 BLE 服务抽离为独立组件 device_ble_service.md  将属性更新 API 改为按索引调用.md  将蓝牙关闭时机改为MQTT连接成功.md  新增设备端属性修改并同步BLE特征值.md  更新 PJ01 文档以匹配 pj01.c.md  添加全局网络模式标志（WiFi_BLE）.md  统一为设备文件包含 base_device.h.md  通过 BLE 暴露并控制设备属性.md  重构设备属性赋值以兼容 BLE.md
components/Battery/: Battery.c  CMakeLists.txt
components/TD01/: CMakeLists.txt  TD01.c
components/base_device/: CMakeLists.txt  CUNZHI01.c  DZC01.c  Kconfig  TD01.c  base_device.c  dianji.c  pj01.c  qiya.c  qtz.c  zidongsuo.c
components/base_device/include/: TD01.h  base_device.h  device_common.h  dianji.h
components/device_ble_service/: CMakeLists.txt  ble_ota.c  device_ble_service.c
components/device_common/: CMakeLists.txt
components/ota_update/: CMakeLists.txt  Kconfig  ota_update.c
components/p_dianji/: CMakeLists.txt  dianji.c
components/qtz/: CMakeLists.txt  qtz.c
components/smqtt/: CMakeLists.txt  smqtt.c
components/tjs/: CMakeLists.txt  tjs.c
docs/: BLE_OTA升级指南.md  BLE操作设备指南.md  Feature.md  MQTT消息类型与格式.md  OTA升级实现指南.md  Python虚拟设备实现指南.md  device_api_reference.md  index.md  固件发布位置说明.md  新增设备类型指南.md  自动OTA方案.md  设备连接方式说明.md
docs/agent/: 发版.md
docs/app/: CUNZHI01_APP开发说明.md
docs/设备定义/: CUNZHI01设备定义.md  DZC01设备定义.md
main/: CMakeLists.txt  blufi_example.h  blufi_example_main.c  blufi_init.c  device_ble_service.c  device_ble_service.h
mpyDemo/DZC01/: bottom_SG90.py  hx711.py  hx711_demo.py  oled_test.py  readme.md
pytest/: README.md  ble_ota_test.py  debug_ota_start.py  device_manager.py  mqtt_monitor.py  ota_server.py  requirements.txt  scan_services.py  test_virtual_devices.py  virtual_devices.py
pytest/gui_controller/: GUI_使用说明.md  README.md  device_gui_controller.py  run_gui.py  启动GUI控制器.bat
(+9 files in other folders)
